--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,9 @@
         <%= title%>
     </title>
     <link rel="stylesheet" href="/css/layout.css">
+    <%- style %>
+
+   
 </head>
     <body>
           <%- include('_header');%>
@@ -19,6 +22,6 @@
            <%- include('_footer');%>
 
 
-    
+           <%- script %>
     </body>
 </html>
