--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,25 +1,35 @@
-<header>
-    Page Header
-    <ul>
-        <% if (locals.user){%>
-        <li>
-          <a href="/users/profile">
-            <%= user.name%>
-          </a>
-        </li>
-         <li>
-           <a href="/users/sign-out">Sign out</a>
-         </li>
-          <%}else{%>
-             <li>
-               <a href="/users/sign-in">Sign In</a>
+<header id="layout-header">
+  <nav>
+      <div class="mini-logo">
+          <p>
+              <a href='/'>
+                  chatapp
+              </a>
+          </p>
+      </div>
+  
+      <div class="auth-links">
+          <ul>
+              <% if (locals.user){ %>
+              <li>
+                  <a href="/users/profile"><%= user.name %></a>
               </li>
               <li>
-                <a href="/users/sign-up">Sign Up</a>
+                  <a href="/users/sign-out">Sign Out</a>
               </li>
-               
-             
+              <% }else{ %>
+              <li>
+                  <a href="/users/sign-in">Sign In</a>
+              </li>
+              <li>
+                  <a href="/users/sign-in">Sign Up</a>
+              </li>
+      
+              <% } %>
+          </ul>
+      </div>
+  </nav>
 
-          <%}%>  
-    </ul>
-  </header>
+
+
+</header>
