--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,4 +1,7 @@
-<h1>Sign Up</h1>
+<h1>
+    Sign Up
+    
+</h1>
 
 <form action="/users/create" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
