user profile setup update handelendusing multer

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
                     
                      <%- include('_post') -%> 
                     
-                <%} %>
+                <%}%>
             </ul>
         </div>
     </section>
@@ -36,4 +36,4 @@
 
 
 </div>
-
+<script src="/js/home_posts.js"></script>
