--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,9 +1,9 @@
-<li>
+<li id="post-<%=post._id %>">
 
     <p>
         <% if (locals.user  && locals.user.id == post.user.id){ %>
         <small>
-           <a href="/posts/destroy/<%= post.id %>">delete</a>
+           <a class="delte-post-button" href="/posts/destroy/<%= post.id %>">delete</a>
         </small>
     <% } %>
 
