--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -11,3 +11,8 @@
     <input type="submit" value="Sign Up">
 
 </form>
+<p>
+    <a href="/users/auth/google">
+        Google Sign-In/Sign-up
+    </a>
+</p>
